# DataCompare

./: .gitignore  README.md  main.py  package-lock.json  pyproject.toml  start.bat  start_server.py  test.py  项目参数文档.md  项目简历介绍.md
backend/: ai_analyzer.py  app.py  comparator.py  config.py  excel_reader.py  fuzzy_matcher.py  models.py  number_finder.py  pdf_extractor.py  report_generator.py  request_controller.py  scheduler.py
cache/: __init__.py  redis_cache.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/test-pdfjs/: index.html  test.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: ExportSettingsModal.jsx  IndicatorTable.jsx  MatchPanel.jsx  PdfStatusBar.jsx  PdfViewer.jsx  ShortcutsPanel.jsx  StatusBar.jsx  Toast.jsx
frontend/src/hooks/: useCompareData.js  useKeyboardShortcuts.js
